--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "moonlight",
+    "name": "dshum/moonlight",
     "description": "Moonlight",
     "license": "MIT",
     "authors": [
