Update composer.json for reason of laravel auto-discovery.

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,12 @@
             "Moonlight\\": "src"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Moonlight\\MoonlightServiceProvider"
+            ]
+        }
+    }
 }
