Avatar hex color.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "Moonlight\\": "src"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "extra": {
         "laravel": {
             "providers": [
