Update laravel from 9 to 12. Update php from 8.2 to 8.4. A few fixes of update issues.

--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3"
+        "php": ">=8.2"
     },
     "autoload": {
         "psr-4": {
-            "Moonlight\\": "src"
-        }
+            "Moonlight\\": "src/"
+        },
+        "classmap": [
+            "src/database"
+        ]
     },
     "minimum-stability": "dev",
     "extra": {
